# guimacrotester

./: .gitignore  LICENSE  README.md  about_dialog.py  clickThings.py  input_controller.py  mac.twm  main.spec  mainwindow.py  paths.py  pyproject.toml  resources.qrc  screen_tree.py  test.tws  toolbar.py  util.py  wut.tws  zensical.toml
.not_github/workflows/: docs.yml
data/: default.json  mac.twm  structure.txt
docs/: build_macro.md  index.md  recording.md  zensical.md
site/: 404.html  index.html  search.json
site/index copy/: index.html
site/markdown/: index.html
site/zensical/: index.html
src/: about_dialog.py  clickThings.py  gmt_toolbars.py  input_controller.py  macro_sequence.py  main.py  ms_table.py  paths.py  resources.py  screen_tree.py  sequence_table.py  toolbar copy.py  toolbar.py  util.py  utils.py
tests/: conftest.py
