[project]
name = "GUI Macro Tester"
dependencies = [
    "PySide6",
    "pytest",
    "pytest-qt",
    "pynput"
]
description = "GUI macro tester"
readme = "README.md"
license = { text = "Apache 2.0" }
authors = [
    { name = "Thomas Walker" email = ""}
]

[tool.pyside6-project]
files = ["mainwindow.py", "clickThings.py"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
qt_api = "pyside6"
addopts = [
    "-ra",        # show extra summary info
    "--strict-markers",
]
